bnx2x: Support statistics collection for VFs by the PF (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16916,6 +16916,7 @@
 	patches.drivers/bnx2x-0012-bnx2x-Infrastructure-for-VF-PF-request-on-PF-side.patch
 	patches.drivers/bnx2x-0013-bnx2x-Support-of-PF-driver-of-a-VF-acquire-request.patch
 	patches.drivers/bnx2x-0014-bnx2x-Support-of-PF-driver-of-a-VF-init-request.patch
+	patches.drivers/bnx2x-0015-bnx2x-Support-statistics-collection-for-VFs-by-the-P.patch
 
 	########################################################
 	# Wireless Networking
