bnx2x: namespace and dead code cleanups (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17086,6 +17086,7 @@
 	patches.drivers/bnx2x-0182-bnx2x-fix-AFEX-memory-overflow.patch
 	patches.drivers/bnx2x-0183-bnx2x-fix-VLAN-configuration-for-VFs.patch
 	patches.drivers/bnx2x-0184-bnx2x-fix-DMA-unmapping-of-TSO-split-BDs.patch
+	patches.drivers/bnx2x-0185-bnx2x-namespace-and-dead-code-cleanups.patch
 
 	########################################################
 	# Wireless Networking
