--- a/series.conf
+++ b/series.conf
@@ -17143,6 +17143,7 @@
 	patches.drivers/bnx2x-0239-bnx2x-Fix-sparse-warnings.patch
 	patches.drivers/bnx2x-0240-bnx2x-prevent-incorrect-byte-swap-in-BE.patch
 	patches.drivers/bnx2x-0241-bnx2x-Configure-device-endianity-on-driver-load-and-.patch
+	patches.drivers/bnx2x-0242-bnx2x-Force-fundamental-reset-for-EEH-recovery.patch
 
 	########################################################
 	# Wireless Networking
