--- a/series.conf
+++ b/series.conf
@@ -17026,6 +17026,7 @@
 	patches.drivers/bnx2x-0122-bnx2x-VF-RSS-support-VF-side.patch
 	patches.drivers/bnx2x-0123-bnx2x-Add-missing-braces-in-bnx2x-bnx2x_link_initial.patch
 	patches.drivers/bnx2x-0124-bnx2x-fix-broken-compilation-with-CONFIG_BNX2X_SRIOV.patch
+	patches.drivers/bnx2x-0125-bnx2x-Restore-a-call-to-config_init.patch
 
 	########################################################
 	# Wireless Networking
