--- a/series.conf
+++ b/series.conf
@@ -16910,6 +16910,7 @@
 	patches.drivers/bnx2x-0006-bnx2x-Add-init-setup_q-set_mac-to-VF-PF-channel.patch
 	patches.drivers/bnx2x-0007-bnx2x-Add-teardown_q-and-close-to-VF-PF-channel.patch
 	patches.drivers/bnx2x-0008-bnx2x-Support-ndo_set_rxmode-in-VF-driver.patch
+	patches.drivers/bnx2x-0009-bnx2x-VF-fastpath.patch
 
 	########################################################
 	# Wireless Networking
