bnx2x: Cosmetic changes (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16960,6 +16960,7 @@
 	patches.drivers/bnx2x-0056-bnx2x-Fix-VF-statistics.patch
 	patches.drivers/bnx2x-0057-bnx2x-Fix-VF-outer-vlan-removal.patch
 	patches.drivers/bnx2x-0058-bnx2x-Prevent-VF-race.patch
+	patches.drivers/bnx2x-0059-bnx2x-Cosmetic-changes.patch
 
 	########################################################
 	# Wireless Networking
