bnx2x: Change function prototype (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17045,6 +17045,7 @@
 	patches.drivers/bnx2x-0141-bnx2x-Test-nvram-when-interface-is-down.patch
 	patches.drivers/bnx2x-0142-bnx2x-Correct-VF-driver-info.patch
 	patches.drivers/bnx2x-0143-bnx2x-Don-t-disable-enable-SR-IOV-when-loading.patch
+	patches.drivers/bnx2x-0144-bnx2x-Change-function-prototype.patch
 
 	########################################################
 	# Wireless Networking
