Bnx2x: remove redundant D0 power state set (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16995,6 +16995,7 @@
 	patches.drivers/bnx2x-0091-bnx2x-Revise-prints.patch
 	patches.drivers/bnx2x-0092-bnx2x-semi-Semantic-changes.patch
 	patches.drivers/bnx2x-0093-bnx2x-fix-a-power-state-test.patch
+	patches.drivers/bnx2x-0094-Bnx2x-remove-redundant-D0-power-state-set.patch
 
 	########################################################
 	# Wireless Networking
