bnx2x: prevent FW assert on low mem during unload (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17060,6 +17060,7 @@
 	patches.drivers/bnx2x-0156-bnx2x-Lock-DMAE-when-used-by-statistic-flow.patch
 	patches.drivers/bnx2x-0157-bnx2x-Don-t-pretend-during-register-dump.patch
 	patches.drivers/bnx2x-0158-bnx2x-Set-NETIF_F_HIGHDMA-unconditionally.patch
+	patches.drivers/bnx2x-0159-bnx2x-prevent-FW-assert-on-low-mem-during-unload.patch
 
 	########################################################
 	# Wireless Networking
