--- a/series.conf
+++ b/series.conf
@@ -16920,6 +16920,7 @@
 	patches.drivers/bnx2x-0016-bnx2x-Support-of-PF-driver-of-a-VF-setup_q-request.patch
 	patches.drivers/bnx2x-0017-bnx2x-Support-of-PF-driver-of-a-VF-q_filters-request.patch
 	patches.drivers/bnx2x-0018-bnx2x-Support-of-PF-driver-of-a-VF-q_teardown-reques.patch
+	patches.drivers/bnx2x-0019-bnx2x-Support-of-PF-driver-of-a-VF-close-request.patch
 
 	########################################################
 	# Wireless Networking
