bnx2x: Convert return 0 to return rc (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17117,6 +17117,7 @@
 	patches.drivers/bnx2x-0213-net-bnx2x-include-irq.h-for-irqreturn_t-definitions.patch
 	patches.drivers/bnx2x-0214-bnx2x-Memory-leak-during-VF-removal.patch
 	patches.drivers/bnx2x-0215-bnx2x-fix-build-when-BNX2X_SRIOV-is-not-enabled.patch
+	patches.drivers/bnx2x-0216-bnx2x-Convert-return-0-to-return-rc.patch
 
 	########################################################
 	# Wireless Networking
