--- a/series.conf
+++ b/series.conf
@@ -16931,6 +16931,7 @@
 	patches.drivers/bnx2x-0027-bnx2x-move-debugging-code-before-the-return.patch
 	patches.drivers/bnx2x-0028-bnx2x-add-ethtool-w-support.patch
 	patches.drivers/bnx2x-0029-bnx2x-improve-stop-on-error.patch
+	patches.drivers/bnx2x-0030-bnx2x-Introduce-2013-and-advance-version-to-1.78.02.patch
 
 	########################################################
 	# Wireless Networking
