bnx2x: Allow VF rss on higher PFs (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17095,6 +17095,7 @@
 	patches.drivers/bnx2x-0191-bnx2x-Fix-generic-option-settings.patch
 	patches.drivers/bnx2x-0192-bnx2x-fix-L2-GRE-TCP-issues.patch
 	patches.drivers/bnx2x-0193-bnx2-x-Make-module-parameters-readable.patch
+	patches.drivers/bnx2x-0194-bnx2x-Allow-VF-rss-on-higher-PFs.patch
 
 	########################################################
 	# Wireless Networking
