bnx2x: Set NETIF_F_HIGHDMA unconditionally (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17059,6 +17059,7 @@
 	patches.drivers/bnx2x-0155-bnx2x-Prevent-null-pointer-dereference-on-error-flow.patch
 	patches.drivers/bnx2x-0156-bnx2x-Lock-DMAE-when-used-by-statistic-flow.patch
 	patches.drivers/bnx2x-0157-bnx2x-Don-t-pretend-during-register-dump.patch
+	patches.drivers/bnx2x-0158-bnx2x-Set-NETIF_F_HIGHDMA-unconditionally.patch
 
 	########################################################
 	# Wireless Networking
