--- a/series.conf
+++ b/series.conf
@@ -16950,6 +16950,7 @@
 	patches.drivers/bnx2x-0046-bnx2x-Add-iproute2-support-for-vfs.patch
 	patches.drivers/bnx2x-0047-bnx2x-Control-number-of-vfs-dynamically.patch
 	patches.drivers/bnx2x-0048-bnx2x-use-list_move-instead-of-list_del-list_add.patch
+	patches.drivers/bnx2x-0049-bnx2x-add-missing-napi-deletion-in-error-path.patch
 
 	########################################################
 	# Wireless Networking
