bnx2x: Remove unnecessary internal mem config (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17098,6 +17098,7 @@
 	patches.drivers/bnx2x-0194-bnx2x-Allow-VF-rss-on-higher-PFs.patch
 	patches.drivers/bnx2x-0195-bnx2x-Debug-change-verbosity-of-some-prints.patch
 	patches.drivers/bnx2x-0196-bnx2x-Remove-unused-iov-code.patch
+	patches.drivers/bnx2x-0197-bnx2x-Remove-unnecessary-internal-mem-config.patch
 
 	########################################################
 	# Wireless Networking
