--- a/series.conf
+++ b/series.conf
@@ -17138,6 +17138,7 @@
 	patches.drivers/bnx2x-0234-bnx2x-Fix-stop-on-error.patch
 	patches.drivers/bnx2x-0235-bnx2x-VF-clean-statistics.patch
 	patches.drivers/bnx2x-0236-bnx2x-Be-more-forgiving-toward-SW-GRO.patch
+	patches.drivers/bnx2x-0237-bnx2x-Fix-timesync-endianity.patch
 
 	########################################################
 	# Wireless Networking
