--- a/series.conf
+++ b/series.conf
@@ -17010,6 +17010,7 @@
 	patches.drivers/bnx2x-0106-bnx2x-update-fairness-parameters-following-DCB-negot.patch
 	patches.drivers/bnx2x-0107-bnx2x-fix-memory-leak-in-VF.patch
 	patches.drivers/bnx2x-0108-bnx2x-fix-PTE-write-access-error.patch
+	patches.drivers/bnx2x-0109-bnx2x-prevent-crash-in-shutdown-flow-with-CNIC.patch
 
 	########################################################
 	# Wireless Networking
