--- a/series.conf
+++ b/series.conf
@@ -17081,6 +17081,7 @@
 	patches.drivers/bnx2x-0177-bnx2x-Fix-incorrect-link-up-report.patch
 	patches.drivers/bnx2x-0178-bnx2x-Fix-KR2-work-around-detection-of-BCM8073.patch
 	patches.drivers/bnx2x-0179-bnx2x-limit-number-of-interrupt-vectors-for-57711.patch
+	patches.drivers/bnx2x-0180-bnx2x-Correct-number-of-MSI-X-vectors-for-VFs.patch
 
 	########################################################
 	# Wireless Networking
