bnx2x: add RSS capability for GRE traffic (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16951,6 +16951,7 @@
 	patches.drivers/bnx2x-0047-bnx2x-Control-number-of-vfs-dynamically.patch
 	patches.drivers/bnx2x-0048-bnx2x-use-list_move-instead-of-list_del-list_add.patch
 	patches.drivers/bnx2x-0049-bnx2x-add-missing-napi-deletion-in-error-path.patch
+	patches.drivers/bnx2x-0050-bnx2x-add-RSS-capability-for-GRE-traffic.patch
 
 	########################################################
 	# Wireless Networking
