bnx2x: fix build when BNX2X_SRIOV is not enabled (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17116,6 +17116,7 @@
 	patches.drivers/bnx2x-0212-bnx2x-Fix-compilation-when-CONFIG_BNX2X_SRIOV-is-not.patch
 	patches.drivers/bnx2x-0213-net-bnx2x-include-irq.h-for-irqreturn_t-definitions.patch
 	patches.drivers/bnx2x-0214-bnx2x-Memory-leak-during-VF-removal.patch
+	patches.drivers/bnx2x-0215-bnx2x-fix-build-when-BNX2X_SRIOV-is-not-enabled.patch
 
 	########################################################
 	# Wireless Networking
