bnx2x: Add num of VFs to Management statistics (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17071,6 +17071,7 @@
 	patches.drivers/bnx2x-0167-bnx2x-Add-AER-support-missing-bits.patch
 	patches.drivers/bnx2x-0168-bnx2x-add-Big-Endian-ethtool-comment.patch
 	patches.drivers/bnx2x-0169-bnx2x-no-error-when-RSS-configuration-fails.patch
+	patches.drivers/bnx2x-0170-bnx2x-Add-num-of-VFs-to-Management-statistics.patch
 
 	########################################################
 	# Wireless Networking
