bnx2x: Allow RX/TX pause control in autoneg (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16971,6 +16971,7 @@
 	patches.drivers/bnx2x-0067-bnx2x-allow-nvram-test-to-run-when-device-is-down.patch
 	patches.drivers/bnx2x-0068-bnx2x-update-version-to-1.78.17-0.patch
 	patches.drivers/bnx2x-0069-bnx2x-prevent-GRO-false-checksum-claims.patch
+	patches.drivers/bnx2x-0070-bnx2x-Allow-RX-TX-pause-control-in-autoneg.patch
 
 	########################################################
 	# Wireless Networking
