--- a/series.conf
+++ b/series.conf
@@ -16927,6 +16927,7 @@
 	patches.drivers/bnx2x-0023-bnx2x-Add-VF-device-ids-and-enable-feature.patch
 	patches.drivers/bnx2x-0024-bnx2x-Segregate-SR-IOV-code.patch
 	patches.drivers/bnx2x-0025-bnx2x-NULL-dereference-on-error-in-debug-code.patch
+	patches.drivers/bnx2x-0026-bnx2x-align-define-usage-to-satisfy-static-checkers.patch
 
 	########################################################
 	# Wireless Networking
