bnx2x: Fix status blocks configuration (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16963,6 +16963,7 @@
 	patches.drivers/bnx2x-0059-bnx2x-Cosmetic-changes.patch
 	patches.drivers/bnx2x-0060-bnx2x-fix-compilation-without-CONFIG_BNX2X_SRIOV.patch
 	patches.drivers/bnx2x-0061-bnx2x-Prevent-UNDI-FW-illegal-host-access.patch
+	patches.drivers/bnx2x-0062-bnx2x-Fix-status-blocks-configuration.patch
 
 	########################################################
 	# Wireless Networking
