bnx2x: Prevent memory leak when cnic is absent (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16978,6 +16978,7 @@
 	patches.drivers/bnx2x-0074-bnx2x-Prevent-NULL-pointer-dereference-in-kdump.patch
 	patches.drivers/bnx2x-0075-Revert-bnx2x-allow-nvram-test-to-run-when-device-is-.patch
 	patches.drivers/bnx2x-0076-bnx2x-correct-reading-of-speed-capabilities.patch
+	patches.drivers/bnx2x-0077-bnx2x-Prevent-memory-leak-when-cnic-is-absent.patch
 
 	########################################################
 	# Wireless Networking
