bnx2x: Update driver version to 1.710.51 (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17128,6 +17128,7 @@
 	patches.drivers/bnx2x-0224-bnx2x-Utilize-FW-7.10.51.patch
 	patches.drivers/bnx2x-0225-bnx2x-Add-timestamping-and-PTP-hardware-clock-suppor.patch
 	patches.drivers/bnx2x-0226-bnx2x-Code-cleanup.patch
+	patches.drivers/bnx2x-0227-bnx2x-Update-driver-version-to-1.710.51.patch
 
 	########################################################
 	# Wireless Networking
