bnx2x: add additional regions for CRC memory test (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16967,6 +16967,7 @@
 	patches.drivers/bnx2x-0063-bnx2x-refactor-nvram-read-procedure.patch
 	patches.drivers/bnx2x-0064-bnx2x-fix-byte-by-byte-nvram-write-for-BE-machines.patch
 	patches.drivers/bnx2x-0065-bnx2x-remove-non-necessary-assignment.patch
+	patches.drivers/bnx2x-0066-bnx2x-add-additional-regions-for-CRC-memory-test.patch
 
 	########################################################
 	# Wireless Networking
