bnx2x: Revise IOV vlan/mac validation (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17101,6 +17101,7 @@
 	patches.drivers/bnx2x-0197-bnx2x-Remove-unnecessary-internal-mem-config.patch
 	patches.drivers/bnx2x-0198-bnx2x-Semantic-Validate-vlan-mac-changes.patch
 	patches.drivers/bnx2x-0199-bnx2x-Add-support-in-PF-driver-for-RSC.patch
+	patches.drivers/bnx2x-0200-bnx2x-Revise-IOV-vlan-mac-validation.patch
 
 	########################################################
 	# Wireless Networking
