--- a/series.conf
+++ b/series.conf
@@ -16922,6 +16922,7 @@
 	patches.drivers/bnx2x-0018-bnx2x-Support-of-PF-driver-of-a-VF-q_teardown-reques.patch
 	patches.drivers/bnx2x-0019-bnx2x-Support-of-PF-driver-of-a-VF-close-request.patch
 	patches.drivers/bnx2x-0020-bnx2x-Support-of-PF-driver-of-a-VF-release-request.patch
+	patches.drivers/bnx2x-0021-bnx2x-Support-VF-FLR.patch
 
 	########################################################
 	# Wireless Networking
