bnx2x: Disable VF access on PF removal (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17061,6 +17061,7 @@
 	patches.drivers/bnx2x-0157-bnx2x-Don-t-pretend-during-register-dump.patch
 	patches.drivers/bnx2x-0158-bnx2x-Set-NETIF_F_HIGHDMA-unconditionally.patch
 	patches.drivers/bnx2x-0159-bnx2x-prevent-FW-assert-on-low-mem-during-unload.patch
+	patches.drivers/bnx2x-0160-bnx2x-Disable-VF-access-on-PF-removal.patch
 
 	########################################################
 	# Wireless Networking
