--- a/series.conf
+++ b/series.conf
@@ -17024,6 +17024,7 @@
 	patches.drivers/bnx2x-0120-bnx2x-Fix-VF-stats-sync.patch
 	patches.drivers/bnx2x-0121-bnx2x-VF-RSS-support-PF-side.patch
 	patches.drivers/bnx2x-0122-bnx2x-VF-RSS-support-VF-side.patch
+	patches.drivers/bnx2x-0123-bnx2x-Add-missing-braces-in-bnx2x-bnx2x_link_initial.patch
 
 	########################################################
 	# Wireless Networking
