bnx2x: Force link UP when the interface is in LOOPBACK mode (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16941,6 +16941,7 @@
 	patches.drivers/bnx2x-0037-bnx2x-correct-memory-release-scheme.patch
 	patches.drivers/bnx2x-0038-bnx2x-Fix-compilation-with-stop-on-error.patch
 	patches.drivers/bnx2x-0039-bnx2x-SR-IOV-version-compatibility-bugfix.patch
+	patches.drivers/bnx2x-0040-bnx2x-Force-link-UP-when-the-interface-is-in-LOOPBAC.patch
 
 	########################################################
 	# Wireless Networking
