--- a/series.conf
+++ b/series.conf
@@ -16982,6 +16982,7 @@
 	patches.drivers/bnx2x-0078-net-bnx2x-dont-reload-on-GRO-change.patch
 	patches.drivers/bnx2x-0079-bnx2x-Link-flap-avoidance-in-switch-dependent-mode.patch
 	patches.drivers/bnx2x-0080-bnx2x-Wait-for-MCP-validity-during-AER.patch
+	patches.drivers/bnx2x-0081-bnx2x-Enable-set_phys_id-for-all-functions.patch
 
 	########################################################
 	# Wireless Networking
