bnx2x: Ack unknown VF messages (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16985,6 +16985,7 @@
 	patches.drivers/bnx2x-0081-bnx2x-Enable-set_phys_id-for-all-functions.patch
 	patches.drivers/bnx2x-0082-bnx2x-Zero-VFs-starting-MACs.patch
 	patches.drivers/bnx2x-0083-bnx2x-Add-and-correct-PCI-link-speed-prints.patch
+	patches.drivers/bnx2x-0084-bnx2x-Ack-unknown-VF-messages.patch
 
 	########################################################
 	# Wireless Networking
