net: bnx2x: remove unnecessary pci_set_drvdata() (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17050,6 +17050,7 @@
 	patches.drivers/bnx2x-0146-net-skb_is_gso_v6-requires-skb_is_gso.patch
 	patches.drivers/bnx2x-0147-net-bnx2x-Change-variable-type-to-bool.patch
 	patches.drivers/bnx2x-0148-bnx2x-record-rx-queue-for-LRO-packets.patch
+	patches.drivers/bnx2x-0149-net-bnx2x-remove-unnecessary-pci_set_drvdata.patch
 
 	########################################################
 	# Wireless Networking
