bnx2x: Fix 1G-baseT link (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17120,6 +17120,7 @@
 	patches.drivers/bnx2x-0216-bnx2x-Convert-return-0-to-return-rc.patch
 	patches.drivers/bnx2x-0217-bnx2x-Remove-useless-return-variables.patch
 	patches.drivers/bnx2x-0218-bnx2x-Fix-link-for-KR-with-swapped-polarity-lane.patch
+	patches.drivers/bnx2x-0219-bnx2x-Fix-1G-baseT-link.patch
 
 	########################################################
 	# Wireless Networking
