--- a/series.conf
+++ b/series.conf
@@ -17064,6 +17064,7 @@
 	patches.drivers/bnx2x-0160-bnx2x-Disable-VF-access-on-PF-removal.patch
 	patches.drivers/bnx2x-0161-bnx2x-Clean-the-sp-rtnl-task-upon-unload.patch
 	patches.drivers/bnx2x-0162-bnx2x-Prevent-panic-during-DMAE-timeout.patch
+	patches.drivers/bnx2x-0163-bnx2x-prevent-CFC-attention.patch
 
 	########################################################
 	# Wireless Networking
