bnx2x: add missing VF resource allocation during init (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17038,6 +17038,7 @@
 	patches.drivers/bnx2x-0134-bnx2x-Fix-848xx-duplex-settings.patch
 	patches.drivers/bnx2x-0135-bnx2x-Prevent-mistaken-hangup-between-driver-FW.patch
 	patches.drivers/bnx2x-0136-bnx2x-Fix-support-for-VFs-on-some-PFs.patch
+	patches.drivers/bnx2x-0137-bnx2x-add-missing-VF-resource-allocation-during-init.patch
 
 	########################################################
 	# Wireless Networking
