bnx2x: VF <-> PF channel 'acquire' at vf probe (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16904,6 +16904,7 @@
 	# bnx2x SP4 update (bsc#908684 FATE#317539)
 	patches.drivers/bnx2x-0001-bnx2x-remove-__dev-attributes.patch
 	patches.drivers/bnx2x-0002-bnx2x-Support-probing-and-removing-of-VF-device.patch
+	patches.drivers/bnx2x-0003-bnx2x-VF-PF-channel-acquire-at-vf-probe.patch
 
 	########################################################
 	# Wireless Networking
