--- a/series.conf
+++ b/series.conf
@@ -17097,6 +17097,7 @@
 	patches.drivers/bnx2x-0193-bnx2-x-Make-module-parameters-readable.patch
 	patches.drivers/bnx2x-0194-bnx2x-Allow-VF-rss-on-higher-PFs.patch
 	patches.drivers/bnx2x-0195-bnx2x-Debug-change-verbosity-of-some-prints.patch
+	patches.drivers/bnx2x-0196-bnx2x-Remove-unused-iov-code.patch
 
 	########################################################
 	# Wireless Networking
