bnx2x: use list_move instead of list_del/list_add (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16949,6 +16949,7 @@
 	patches.drivers/bnx2x-0045-bnx2x-Set-ethtool-ops-for-vfs.patch
 	patches.drivers/bnx2x-0046-bnx2x-Add-iproute2-support-for-vfs.patch
 	patches.drivers/bnx2x-0047-bnx2x-Control-number-of-vfs-dynamically.patch
+	patches.drivers/bnx2x-0048-bnx2x-use-list_move-instead-of-list_del-list_add.patch
 
 	########################################################
 	# Wireless Networking
