--- a/series.conf
+++ b/series.conf
@@ -16966,6 +16966,7 @@
 	patches.drivers/bnx2x-0062-bnx2x-Fix-status-blocks-configuration.patch
 	patches.drivers/bnx2x-0063-bnx2x-refactor-nvram-read-procedure.patch
 	patches.drivers/bnx2x-0064-bnx2x-fix-byte-by-byte-nvram-write-for-BE-machines.patch
+	patches.drivers/bnx2x-0065-bnx2x-remove-non-necessary-assignment.patch
 
 	########################################################
 	# Wireless Networking
