Revert "bnx2x: allow nvram test to run when device is down" (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16976,6 +16976,7 @@
 	patches.drivers/bnx2x-0072-bnx2x-Fix-memory-leak.patch
 	patches.drivers/bnx2x-0073-bnx2x-Allow-recovery-from-second-slot-reset.patch
 	patches.drivers/bnx2x-0074-bnx2x-Prevent-NULL-pointer-dereference-in-kdump.patch
+	patches.drivers/bnx2x-0075-Revert-bnx2x-allow-nvram-test-to-run-when-device-is-.patch
 
 	########################################################
 	# Wireless Networking
