bnx2x: Add timestamping and PTP hardware clock support (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17126,6 +17126,7 @@
 	patches.drivers/bnx2x-0222-bnx2x-fix-set_setting-for-some-PHYs.patch
 	patches.drivers/bnx2x-0223-net-ethernet-broadcom-bnx2x-Remove-redundant-ifdef.patch
 	patches.drivers/bnx2x-0224-bnx2x-Utilize-FW-7.10.51.patch
+	patches.drivers/bnx2x-0225-bnx2x-Add-timestamping-and-PTP-hardware-clock-suppor.patch
 
 	########################################################
 	# Wireless Networking
