bnx2x: Fix static checker warning regarding `txdata_ptr' (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17139,6 +17139,7 @@
 	patches.drivers/bnx2x-0235-bnx2x-VF-clean-statistics.patch
 	patches.drivers/bnx2x-0236-bnx2x-Be-more-forgiving-toward-SW-GRO.patch
 	patches.drivers/bnx2x-0237-bnx2x-Fix-timesync-endianity.patch
+	patches.drivers/bnx2x-0238-bnx2x-Fix-static-checker-warning-regarding-txdata_pt.patch
 
 	########################################################
 	# Wireless Networking
