--- a/series.conf
+++ b/series.conf
@@ -17096,6 +17096,7 @@
 	patches.drivers/bnx2x-0192-bnx2x-fix-L2-GRE-TCP-issues.patch
 	patches.drivers/bnx2x-0193-bnx2-x-Make-module-parameters-readable.patch
 	patches.drivers/bnx2x-0194-bnx2x-Allow-VF-rss-on-higher-PFs.patch
+	patches.drivers/bnx2x-0195-bnx2x-Debug-change-verbosity-of-some-prints.patch
 
 	########################################################
 	# Wireless Networking
