--- a/series.conf
+++ b/series.conf
@@ -17068,6 +17068,7 @@
 	patches.drivers/bnx2x-0164-bnx2x-Prevent-timeout-waiting-for-state-X.patch
 	patches.drivers/bnx2x-0165-bnx2x-avoid-null-pointer-dereference-when-enabling-S.patch
 	patches.drivers/bnx2x-0166-bnx2x-downgrade-valid-ME-register-value-message-leve.patch
+	patches.drivers/bnx2x-0167-bnx2x-Add-AER-support-missing-bits.patch
 
 	########################################################
 	# Wireless Networking
