bnx2x: move debugging code before the return (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16928,6 +16928,7 @@
 	patches.drivers/bnx2x-0024-bnx2x-Segregate-SR-IOV-code.patch
 	patches.drivers/bnx2x-0025-bnx2x-NULL-dereference-on-error-in-debug-code.patch
 	patches.drivers/bnx2x-0026-bnx2x-align-define-usage-to-satisfy-static-checkers.patch
+	patches.drivers/bnx2x-0027-bnx2x-move-debugging-code-before-the-return.patch
 
 	########################################################
 	# Wireless Networking
