bnx2x: Don't receive packets when the napi budget == 0 (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17109,6 +17109,7 @@
 	patches.drivers/bnx2x-0205-bnx2x-clamp-num_queues-to-prevent-passing-a-negative.patch
 	patches.drivers/bnx2x-0206-bnx2x-save-RAM-in-kdump-kernel-by-using-a-single-que.patch
 	patches.drivers/bnx2x-0207-bnx2x-save-RAM-in-kdump-kernel-by-disabling-TPA.patch
+	patches.drivers/bnx2x-0208-bnx2x-Don-t-receive-packets-when-the-napi-budget-0.patch
 
 	########################################################
 	# Wireless Networking
