bnx2x: fix sparse warning (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17088,6 +17088,7 @@
 	patches.drivers/bnx2x-0184-bnx2x-fix-DMA-unmapping-of-TSO-split-BDs.patch
 	patches.drivers/bnx2x-0185-bnx2x-namespace-and-dead-code-cleanups.patch
 	patches.drivers/bnx2x-0186-bnx2x-Correct-default-Tx-switching-behaviour.patch
+	patches.drivers/bnx2x-0187-bnx2x-fix-sparse-warning.patch
 
 	########################################################
 	# Wireless Networking
