bnx2x: utilize FW 7.8.19 (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17104,6 +17104,7 @@
 	patches.drivers/bnx2x-0200-bnx2x-Revise-IOV-vlan-mac-validation.patch
 	patches.drivers/bnx2x-0201-bnx2x-Fix-bnx2x_panic_dump-for-VFs.patch
 	patches.drivers/bnx2x-0202-bnx2x-semantic-revise-scheduling-of-sp_rtnl.patch
+	patches.drivers/bnx2x-0203-bnx2x-utilize-FW-7.8.19.patch
 
 	########################################################
 	# Wireless Networking
