bnx2x: add VF Multicast filters support (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17072,6 +17072,7 @@
 	patches.drivers/bnx2x-0168-bnx2x-add-Big-Endian-ethtool-comment.patch
 	patches.drivers/bnx2x-0169-bnx2x-no-error-when-RSS-configuration-fails.patch
 	patches.drivers/bnx2x-0170-bnx2x-Add-num-of-VFs-to-Management-statistics.patch
+	patches.drivers/bnx2x-0171-bnx2x-add-VF-Multicast-filters-support.patch
 
 	########################################################
 	# Wireless Networking
