bnx2x: Enlarge the dorq threshold for VFs (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17121,6 +17121,7 @@
 	patches.drivers/bnx2x-0217-bnx2x-Remove-useless-return-variables.patch
 	patches.drivers/bnx2x-0218-bnx2x-Fix-link-for-KR-with-swapped-polarity-lane.patch
 	patches.drivers/bnx2x-0219-bnx2x-Fix-1G-baseT-link.patch
+	patches.drivers/bnx2x-0220-bnx2x-Enlarge-the-dorq-threshold-for-VFs.patch
 
 	########################################################
 	# Wireless Networking
