bnx2x: Prevent mistaken hangup between driver & FW (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17036,6 +17036,7 @@
 	patches.drivers/bnx2x-0132-bnx2x-57840-non-external-loopback-test-fail-on-1G.patch
 	patches.drivers/bnx2x-0133-bnx2x-Specific-Active-DAC-is-not-detected-on-57810.patch
 	patches.drivers/bnx2x-0134-bnx2x-Fix-848xx-duplex-settings.patch
+	patches.drivers/bnx2x-0135-bnx2x-Prevent-mistaken-hangup-between-driver-FW.patch
 
 	########################################################
 	# Wireless Networking
