bnx2x: Be more forgiving toward SW GRO (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17137,6 +17137,7 @@
 	patches.drivers/bnx2x-0233-bnx2x-ethtool-d-might-cause-timeout-in-log.patch
 	patches.drivers/bnx2x-0234-bnx2x-Fix-stop-on-error.patch
 	patches.drivers/bnx2x-0235-bnx2x-VF-clean-statistics.patch
+	patches.drivers/bnx2x-0236-bnx2x-Be-more-forgiving-toward-SW-GRO.patch
 
 	########################################################
 	# Wireless Networking
