--- a/series.conf
+++ b/series.conf
@@ -17054,6 +17054,7 @@
 	patches.drivers/bnx2x-0150-bnx2x-Fix-Maximum-CoS-estimation-for-VFs.patch
 	patches.drivers/bnx2x-0151-bnx2x-Prevent-an-illegal-pointer-dereference-during-.patch
 	patches.drivers/bnx2x-0152-bnx2x-Unlock-VF-PF-channel-on-MAC-VLAN-config-error.patch
+	patches.drivers/bnx2x-0153-bnx2x-Fix-Coalescing-configuration.patch
 
 	########################################################
 	# Wireless Networking
