bnx2x, bnx2fc: Use per port max exchange resources (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16986,6 +16986,7 @@
 	patches.drivers/bnx2x-0082-bnx2x-Zero-VFs-starting-MACs.patch
 	patches.drivers/bnx2x-0083-bnx2x-Add-and-correct-PCI-link-speed-prints.patch
 	patches.drivers/bnx2x-0084-bnx2x-Ack-unknown-VF-messages.patch
+	patches.drivers/bnx2x-0085-bnx2x-bnx2fc-Use-per-port-max-exchange-resources.patch
 
 	########################################################
 	# Wireless Networking
