net: bnx2x: include irq.h for irqreturn_t definitions (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17114,6 +17114,7 @@
 	patches.drivers/bnx2x-0210-bnx2x-Create-workqueue-for-IOV-related-tasks.patch
 	patches.drivers/bnx2x-0211-bnx2x-Don-t-show-port-statistics-for-VFs.patch
 	patches.drivers/bnx2x-0212-bnx2x-Fix-compilation-when-CONFIG_BNX2X_SRIOV-is-not.patch
+	patches.drivers/bnx2x-0213-net-bnx2x-include-irq.h-for-irqreturn_t-definitions.patch
 
 	########################################################
 	# Wireless Networking
