bnx2x: Specific Active-DAC is not detected on 57810 (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17034,6 +17034,7 @@
 	patches.drivers/bnx2x-0130-bnx2x-Generalize-KR-work-around.patch
 	patches.drivers/bnx2x-0131-bnx2x-KR2-disablement-fix.patch
 	patches.drivers/bnx2x-0132-bnx2x-57840-non-external-loopback-test-fail-on-1G.patch
+	patches.drivers/bnx2x-0133-bnx2x-Specific-Active-DAC-is-not-detected-on-57810.patch
 
 	########################################################
 	# Wireless Networking
