--- a/series.conf
+++ b/series.conf
@@ -17049,6 +17049,7 @@
 	patches.drivers/bnx2x-0145-bnx2x-Add-support-for-EXTPHY2-LED-mode.patch
 	patches.drivers/bnx2x-0146-net-skb_is_gso_v6-requires-skb_is_gso.patch
 	patches.drivers/bnx2x-0147-net-bnx2x-Change-variable-type-to-bool.patch
+	patches.drivers/bnx2x-0148-bnx2x-record-rx-queue-for-LRO-packets.patch
 
 	########################################################
 	# Wireless Networking
