--- a/series.conf
+++ b/series.conf
@@ -17020,6 +17020,7 @@
 	patches.drivers/bnx2x-0116-bnx2x-vf-mark-stats-started.patch
 	patches.drivers/bnx2x-0117-bnx2x-Fix-move-FP-memory-deallocations.patch
 	patches.drivers/bnx2x-0118-bnx2x-Fix-functionality-of-configuring-vlan-list.patch
+	patches.drivers/bnx2x-0119-bnx2x-Fix-VF-memory-leak-unload.patch
 
 	########################################################
 	# Wireless Networking
