bnx2x: fix a power state test (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16994,6 +16994,7 @@
 	patches.drivers/bnx2x-0090-bnx2x-Semantic-removal-and-beautification.patch
 	patches.drivers/bnx2x-0091-bnx2x-Revise-prints.patch
 	patches.drivers/bnx2x-0092-bnx2x-semi-Semantic-changes.patch
+	patches.drivers/bnx2x-0093-bnx2x-fix-a-power-state-test.patch
 
 	########################################################
 	# Wireless Networking
