--- a/series.conf
+++ b/series.conf
@@ -17067,6 +17067,7 @@
 	patches.drivers/bnx2x-0163-bnx2x-prevent-CFC-attention.patch
 	patches.drivers/bnx2x-0164-bnx2x-Prevent-timeout-waiting-for-state-X.patch
 	patches.drivers/bnx2x-0165-bnx2x-avoid-null-pointer-dereference-when-enabling-S.patch
+	patches.drivers/bnx2x-0166-bnx2x-downgrade-valid-ME-register-value-message-leve.patch
 
 	########################################################
 	# Wireless Networking
