--- a/series.conf
+++ b/series.conf
@@ -16964,6 +16964,7 @@
 	patches.drivers/bnx2x-0060-bnx2x-fix-compilation-without-CONFIG_BNX2X_SRIOV.patch
 	patches.drivers/bnx2x-0061-bnx2x-Prevent-UNDI-FW-illegal-host-access.patch
 	patches.drivers/bnx2x-0062-bnx2x-Fix-status-blocks-configuration.patch
+	patches.drivers/bnx2x-0063-bnx2x-refactor-nvram-read-procedure.patch
 
 	########################################################
 	# Wireless Networking
