--- a/series.conf
+++ b/series.conf
@@ -17066,6 +17066,7 @@
 	patches.drivers/bnx2x-0162-bnx2x-Prevent-panic-during-DMAE-timeout.patch
 	patches.drivers/bnx2x-0163-bnx2x-prevent-CFC-attention.patch
 	patches.drivers/bnx2x-0164-bnx2x-Prevent-timeout-waiting-for-state-X.patch
+	patches.drivers/bnx2x-0165-bnx2x-avoid-null-pointer-dereference-when-enabling-S.patch
 
 	########################################################
 	# Wireless Networking
