bnx2x: Fix build with SRIOV disabled (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17073,6 +17073,7 @@
 	patches.drivers/bnx2x-0169-bnx2x-no-error-when-RSS-configuration-fails.patch
 	patches.drivers/bnx2x-0170-bnx2x-Add-num-of-VFs-to-Management-statistics.patch
 	patches.drivers/bnx2x-0171-bnx2x-add-VF-Multicast-filters-support.patch
+	patches.drivers/bnx2x-0172-bnx2x-Fix-build-with-SRIOV-disabled.patch
 
 	########################################################
 	# Wireless Networking
