--- a/series.conf
+++ b/series.conf
@@ -17123,6 +17123,7 @@
 	patches.drivers/bnx2x-0219-bnx2x-Fix-1G-baseT-link.patch
 	patches.drivers/bnx2x-0220-bnx2x-Enlarge-the-dorq-threshold-for-VFs.patch
 	patches.drivers/bnx2x-0221-bnx2x-Fix-the-MSI-flags.patch
+	patches.drivers/bnx2x-0222-bnx2x-fix-set_setting-for-some-PHYs.patch
 
 	########################################################
 	# Wireless Networking
