bnx2x: Memory leak during VF removal (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17115,6 +17115,7 @@
 	patches.drivers/bnx2x-0211-bnx2x-Don-t-show-port-statistics-for-VFs.patch
 	patches.drivers/bnx2x-0212-bnx2x-Fix-compilation-when-CONFIG_BNX2X_SRIOV-is-not.patch
 	patches.drivers/bnx2x-0213-net-bnx2x-include-irq.h-for-irqreturn_t-definitions.patch
+	patches.drivers/bnx2x-0214-bnx2x-Memory-leak-during-VF-removal.patch
 
 	########################################################
 	# Wireless Networking
