bnx2x: improve VF timings (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16998,6 +16998,7 @@
 	patches.drivers/bnx2x-0094-Bnx2x-remove-redundant-D0-power-state-set.patch
 	patches.drivers/bnx2x-0095-bnx2x-Improve-PF-behaviour-toward-VF.patch
 	patches.drivers/bnx2x-0096-bnx2x-VF-ndo-sanity.patch
+	patches.drivers/bnx2x-0097-bnx2x-improve-VF-timings.patch
 
 	########################################################
 	# Wireless Networking
