bnx2x: Test nvram when interface is down (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17042,6 +17042,7 @@
 	patches.drivers/bnx2x-0138-bnx2x-prevent-masking-error-from-cnic.patch
 	patches.drivers/bnx2x-0139-bnx2x-prevent-masked-MCP-parities-from-appearing.patch
 	patches.drivers/bnx2x-0140-bnx2x-handle-known-but-unsupported-VF-messages.patch
+	patches.drivers/bnx2x-0141-bnx2x-Test-nvram-when-interface-is-down.patch
 
 	########################################################
 	# Wireless Networking
