bnx2x: fix DMA unmapping of TSO split BDs (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17085,6 +17085,7 @@
 	patches.drivers/bnx2x-0181-bnx2x-Clean-before-update-RSS-arrives.patch
 	patches.drivers/bnx2x-0182-bnx2x-fix-AFEX-memory-overflow.patch
 	patches.drivers/bnx2x-0183-bnx2x-fix-VLAN-configuration-for-VFs.patch
+	patches.drivers/bnx2x-0184-bnx2x-fix-DMA-unmapping-of-TSO-split-BDs.patch
 
 	########################################################
 	# Wireless Networking
