bnx2x: Fix config when SR-IOV and iSCSI are enabled (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17055,6 +17055,7 @@
 	patches.drivers/bnx2x-0151-bnx2x-Prevent-an-illegal-pointer-dereference-during-.patch
 	patches.drivers/bnx2x-0152-bnx2x-Unlock-VF-PF-channel-on-MAC-VLAN-config-error.patch
 	patches.drivers/bnx2x-0153-bnx2x-Fix-Coalescing-configuration.patch
+	patches.drivers/bnx2x-0154-bnx2x-Fix-config-when-SR-IOV-and-iSCSI-are-enabled.patch
 
 	########################################################
 	# Wireless Networking
