bnx2x: correct memory release scheme (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16938,6 +16938,7 @@
 	patches.drivers/bnx2x-0034-bnx2x-Add-additional-debug-information.patch
 	patches.drivers/bnx2x-0035-bnx2x-Add-missing-VFs-reference-in-macros.patch
 	patches.drivers/bnx2x-0036-bnx2x-Remove-many-sparse-warnings.patch
+	patches.drivers/bnx2x-0037-bnx2x-correct-memory-release-scheme.patch
 
 	########################################################
 	# Wireless Networking
