bnx2x: Fix configuration of doorbell block (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17027,6 +17027,7 @@
 	patches.drivers/bnx2x-0123-bnx2x-Add-missing-braces-in-bnx2x-bnx2x_link_initial.patch
 	patches.drivers/bnx2x-0124-bnx2x-fix-broken-compilation-with-CONFIG_BNX2X_SRIOV.patch
 	patches.drivers/bnx2x-0125-bnx2x-Restore-a-call-to-config_init.patch
+	patches.drivers/bnx2x-0126-bnx2x-Fix-configuration-of-doorbell-block.patch
 
 	########################################################
 	# Wireless Networking
