bnx2x: Fix compilation with no IOV support (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17000,6 +17000,7 @@
 	patches.drivers/bnx2x-0096-bnx2x-VF-ndo-sanity.patch
 	patches.drivers/bnx2x-0097-bnx2x-improve-VF-timings.patch
 	patches.drivers/bnx2x-0098-bnx2x-Fix-20G-KR2-support-claims.patch
+	patches.drivers/bnx2x-0099-bnx2x-Fix-compilation-with-no-IOV-support.patch
 
 	########################################################
 	# Wireless Networking
