--- a/series.conf
+++ b/series.conf
@@ -17014,6 +17014,7 @@
 	patches.drivers/bnx2x-0110-bnx2x-dropless-flow-control-not-always-functional.patch
 	patches.drivers/bnx2x-0111-bnx2x-Change-DCB-context-handling.patch
 	patches.drivers/bnx2x-0112-bnx2x-Consider-DCBX-remote-error.patch
+	patches.drivers/bnx2x-0113-bnx2x-prevent-VF-benign-attentions.patch
 
 	########################################################
 	# Wireless Networking
