bnx2x: Separate VF and PF logic (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16906,6 +16906,7 @@
 	patches.drivers/bnx2x-0002-bnx2x-Support-probing-and-removing-of-VF-device.patch
 	patches.drivers/bnx2x-0003-bnx2x-VF-PF-channel-acquire-at-vf-probe.patch
 	patches.drivers/bnx2x-0004-bnx2x-Add-to-VF-PF-channel-the-release-request.patch
+	patches.drivers/bnx2x-0005-bnx2x-Separate-VF-and-PF-logic.patch
 
 	########################################################
 	# Wireless Networking
