bnx2x: Fix passive DAC cable detection (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17076,6 +17076,7 @@
 	patches.drivers/bnx2x-0172-bnx2x-Fix-build-with-SRIOV-disabled.patch
 	patches.drivers/bnx2x-0173-net-bnx2x-slight-optimization-of-addr-compare.patch
 	patches.drivers/bnx2x-0174-bnx2x-Fix-578xx-KR-1G-link.patch
+	patches.drivers/bnx2x-0175-bnx2x-Fix-passive-DAC-cable-detection.patch
 
 	########################################################
 	# Wireless Networking
