--- a/series.conf
+++ b/series.conf
@@ -16936,6 +16936,7 @@
 	patches.drivers/bnx2x-0032-bnx2x-reorganization-and-beautification.patch
 	patches.drivers/bnx2x-0033-bnx2x-correct-usleep_range-usage.patch
 	patches.drivers/bnx2x-0034-bnx2x-Add-additional-debug-information.patch
+	patches.drivers/bnx2x-0035-bnx2x-Add-missing-VFs-reference-in-macros.patch
 
 	########################################################
 	# Wireless Networking
