bnx2x: Semantic change of empty lines (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16989,6 +16989,7 @@
 	patches.drivers/bnx2x-0085-bnx2x-bnx2fc-Use-per-port-max-exchange-resources.patch
 	patches.drivers/bnx2x-0086-bnx2x-Count-number-of-possible-FCoE-interfaces.patch
 	patches.drivers/bnx2x-0087-bnx2x-Implement-PCI-shutdown.patch
+	patches.drivers/bnx2x-0088-bnx2x-Semantic-change-of-empty-lines.patch
 
 	########################################################
 	# Wireless Networking
