bnx2x: Don't release PCI bars on shutdown (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17089,6 +17089,7 @@
 	patches.drivers/bnx2x-0185-bnx2x-namespace-and-dead-code-cleanups.patch
 	patches.drivers/bnx2x-0186-bnx2x-Correct-default-Tx-switching-behaviour.patch
 	patches.drivers/bnx2x-0187-bnx2x-fix-sparse-warning.patch
+	patches.drivers/bnx2x-0188-bnx2x-Don-t-release-PCI-bars-on-shutdown.patch
 
 	########################################################
 	# Wireless Networking
