--- a/series.conf
+++ b/series.conf
@@ -16942,6 +16942,7 @@
 	patches.drivers/bnx2x-0038-bnx2x-Fix-compilation-with-stop-on-error.patch
 	patches.drivers/bnx2x-0039-bnx2x-SR-IOV-version-compatibility-bugfix.patch
 	patches.drivers/bnx2x-0040-bnx2x-Force-link-UP-when-the-interface-is-in-LOOPBAC.patch
+	patches.drivers/bnx2x-0041-bnx2x-remove-dead-code-and-make-local-funcs-static.patch
 
 	########################################################
 	# Wireless Networking
