bnx2x: Semantic Validate vlan/mac changes (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17099,6 +17099,7 @@
 	patches.drivers/bnx2x-0195-bnx2x-Debug-change-verbosity-of-some-prints.patch
 	patches.drivers/bnx2x-0196-bnx2x-Remove-unused-iov-code.patch
 	patches.drivers/bnx2x-0197-bnx2x-Remove-unnecessary-internal-mem-config.patch
+	patches.drivers/bnx2x-0198-bnx2x-Semantic-Validate-vlan-mac-changes.patch
 
 	########################################################
 	# Wireless Networking
