--- a/series.conf
+++ b/series.conf
@@ -17127,6 +17127,7 @@
 	patches.drivers/bnx2x-0223-net-ethernet-broadcom-bnx2x-Remove-redundant-ifdef.patch
 	patches.drivers/bnx2x-0224-bnx2x-Utilize-FW-7.10.51.patch
 	patches.drivers/bnx2x-0225-bnx2x-Add-timestamping-and-PTP-hardware-clock-suppor.patch
+	patches.drivers/bnx2x-0226-bnx2x-Code-cleanup.patch
 
 	########################################################
 	# Wireless Networking
