bnx2x: Prepare device and initialize VF database (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16912,6 +16912,7 @@
 	patches.drivers/bnx2x-0008-bnx2x-Support-ndo_set_rxmode-in-VF-driver.patch
 	patches.drivers/bnx2x-0009-bnx2x-VF-fastpath.patch
 	patches.drivers/bnx2x-0010-bnx2x-Allocate-VF-database-in-PF-when-VFs-are-presen.patch
+	patches.drivers/bnx2x-0011-bnx2x-Prepare-device-and-initialize-VF-database.patch
 
 	########################################################
 	# Wireless Networking
