--- a/series.conf
+++ b/series.conf
@@ -16962,6 +16962,7 @@
 	patches.drivers/bnx2x-0058-bnx2x-Prevent-VF-race.patch
 	patches.drivers/bnx2x-0059-bnx2x-Cosmetic-changes.patch
 	patches.drivers/bnx2x-0060-bnx2x-fix-compilation-without-CONFIG_BNX2X_SRIOV.patch
+	patches.drivers/bnx2x-0061-bnx2x-Prevent-UNDI-FW-illegal-host-access.patch
 
 	########################################################
 	# Wireless Networking
