bnx2x: Fix compilation when CONFIG_BNX2X_SRIOV is not set (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17113,6 +17113,7 @@
 	patches.drivers/bnx2x-0209-bnx2x-Support-mng.-request-for-driver-version.patch
 	patches.drivers/bnx2x-0210-bnx2x-Create-workqueue-for-IOV-related-tasks.patch
 	patches.drivers/bnx2x-0211-bnx2x-Don-t-show-port-statistics-for-VFs.patch
+	patches.drivers/bnx2x-0212-bnx2x-Fix-compilation-when-CONFIG_BNX2X_SRIOV-is-not.patch
 
 	########################################################
 	# Wireless Networking
