--- a/series.conf
+++ b/series.conf
@@ -17037,6 +17037,7 @@
 	patches.drivers/bnx2x-0133-bnx2x-Specific-Active-DAC-is-not-detected-on-57810.patch
 	patches.drivers/bnx2x-0134-bnx2x-Fix-848xx-duplex-settings.patch
 	patches.drivers/bnx2x-0135-bnx2x-Prevent-mistaken-hangup-between-driver-FW.patch
+	patches.drivers/bnx2x-0136-bnx2x-Fix-support-for-VFs-on-some-PFs.patch
 
 	########################################################
 	# Wireless Networking
