--- a/series.conf
+++ b/series.conf
@@ -17033,6 +17033,7 @@
 	patches.drivers/bnx2x-0129-DMA-API-net-broadcom-bnx2x-replace-dma_set_mask-dma_.patch
 	patches.drivers/bnx2x-0130-bnx2x-Generalize-KR-work-around.patch
 	patches.drivers/bnx2x-0131-bnx2x-KR2-disablement-fix.patch
+	patches.drivers/bnx2x-0132-bnx2x-57840-non-external-loopback-test-fail-on-1G.patch
 
 	########################################################
 	# Wireless Networking
