--- a/series.conf
+++ b/series.conf
@@ -16932,6 +16932,7 @@
 	patches.drivers/bnx2x-0028-bnx2x-add-ethtool-w-support.patch
 	patches.drivers/bnx2x-0029-bnx2x-improve-stop-on-error.patch
 	patches.drivers/bnx2x-0030-bnx2x-Introduce-2013-and-advance-version-to-1.78.02.patch
+	patches.drivers/bnx2x-0031-bnx2x-Semantic-renovation.patch
 
 	########################################################
 	# Wireless Networking
