bnx2x: Allocate VF database in PF when VFs are present (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16911,6 +16911,7 @@
 	patches.drivers/bnx2x-0007-bnx2x-Add-teardown_q-and-close-to-VF-PF-channel.patch
 	patches.drivers/bnx2x-0008-bnx2x-Support-ndo_set_rxmode-in-VF-driver.patch
 	patches.drivers/bnx2x-0009-bnx2x-VF-fastpath.patch
+	patches.drivers/bnx2x-0010-bnx2x-Allocate-VF-database-in-PF-when-VFs-are-presen.patch
 
 	########################################################
 	# Wireless Networking
