--- a/series.conf
+++ b/series.conf
@@ -17083,6 +17083,7 @@
 	patches.drivers/bnx2x-0179-bnx2x-limit-number-of-interrupt-vectors-for-57711.patch
 	patches.drivers/bnx2x-0180-bnx2x-Correct-number-of-MSI-X-vectors-for-VFs.patch
 	patches.drivers/bnx2x-0181-bnx2x-Clean-before-update-RSS-arrives.patch
+	patches.drivers/bnx2x-0182-bnx2x-fix-AFEX-memory-overflow.patch
 
 	########################################################
 	# Wireless Networking
