--- a/series.conf
+++ b/series.conf
@@ -17062,6 +17062,7 @@
 	patches.drivers/bnx2x-0158-bnx2x-Set-NETIF_F_HIGHDMA-unconditionally.patch
 	patches.drivers/bnx2x-0159-bnx2x-prevent-FW-assert-on-low-mem-during-unload.patch
 	patches.drivers/bnx2x-0160-bnx2x-Disable-VF-access-on-PF-removal.patch
+	patches.drivers/bnx2x-0161-bnx2x-Clean-the-sp-rtnl-task-upon-unload.patch
 
 	########################################################
 	# Wireless Networking
