bnx2x: Zero VFs starting MACs (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16983,6 +16983,7 @@
 	patches.drivers/bnx2x-0079-bnx2x-Link-flap-avoidance-in-switch-dependent-mode.patch
 	patches.drivers/bnx2x-0080-bnx2x-Wait-for-MCP-validity-during-AER.patch
 	patches.drivers/bnx2x-0081-bnx2x-Enable-set_phys_id-for-all-functions.patch
+	patches.drivers/bnx2x-0082-bnx2x-Zero-VFs-starting-MACs.patch
 
 	########################################################
 	# Wireless Networking
