--- a/series.conf
+++ b/series.conf
@@ -17135,6 +17135,7 @@
 	patches.drivers/bnx2x-0231-bnx2x-Make-BP_VF-more-robust.patch
 	patches.drivers/bnx2x-0232-bnx2x-FW-assertion-changes.patch
 	patches.drivers/bnx2x-0233-bnx2x-ethtool-d-might-cause-timeout-in-log.patch
+	patches.drivers/bnx2x-0234-bnx2x-Fix-stop-on-error.patch
 
 	########################################################
 	# Wireless Networking
