--- a/series.conf
+++ b/series.conf
@@ -17087,6 +17087,7 @@
 	patches.drivers/bnx2x-0183-bnx2x-fix-VLAN-configuration-for-VFs.patch
 	patches.drivers/bnx2x-0184-bnx2x-fix-DMA-unmapping-of-TSO-split-BDs.patch
 	patches.drivers/bnx2x-0185-bnx2x-namespace-and-dead-code-cleanups.patch
+	patches.drivers/bnx2x-0186-bnx2x-Correct-default-Tx-switching-behaviour.patch
 
 	########################################################
 	# Wireless Networking
