bnx2x: Prevent NULL pointer dereference in kdump (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16975,6 +16975,7 @@
 	patches.drivers/bnx2x-0071-bnx2x-Enhance-MAC-configuration-for-VFs.patch
 	patches.drivers/bnx2x-0072-bnx2x-Fix-memory-leak.patch
 	patches.drivers/bnx2x-0073-bnx2x-Allow-recovery-from-second-slot-reset.patch
+	patches.drivers/bnx2x-0074-bnx2x-Prevent-NULL-pointer-dereference-in-kdump.patch
 
 	########################################################
 	# Wireless Networking
