bnx2x: KR2 disablement fix (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17032,6 +17032,7 @@
 	patches.drivers/bnx2x-0128-net-bnx2x-Staticize-local-symbols.patch
 	patches.drivers/bnx2x-0129-DMA-API-net-broadcom-bnx2x-replace-dma_set_mask-dma_.patch
 	patches.drivers/bnx2x-0130-bnx2x-Generalize-KR-work-around.patch
+	patches.drivers/bnx2x-0131-bnx2x-KR2-disablement-fix.patch
 
 	########################################################
 	# Wireless Networking
