bnx2x: Support PF <-> VF Bulletin Board (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16923,6 +16923,7 @@
 	patches.drivers/bnx2x-0019-bnx2x-Support-of-PF-driver-of-a-VF-close-request.patch
 	patches.drivers/bnx2x-0020-bnx2x-Support-of-PF-driver-of-a-VF-release-request.patch
 	patches.drivers/bnx2x-0021-bnx2x-Support-VF-FLR.patch
+	patches.drivers/bnx2x-0022-bnx2x-Support-PF-VF-Bulletin-Board.patch
 
 	########################################################
 	# Wireless Networking
