bnx2x: update fairness parameters following DCB negotiation (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17007,6 +17007,7 @@
 	patches.drivers/bnx2x-0103-bnx2x-fill-in-sane-dump-flag-information.patch
 	patches.drivers/bnx2x-0104-bnx2x-Revising-locking-scheme-for-MAC-configuration.patch
 	patches.drivers/bnx2x-0105-bnx2x-clean-up-unnecessary-MSI-MSI-X-capability-find.patch
+	patches.drivers/bnx2x-0106-bnx2x-update-fairness-parameters-following-DCB-negot.patch
 
 	########################################################
 	# Wireless Networking
