bnx2x: Fix VF stats sync (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17021,6 +17021,7 @@
 	patches.drivers/bnx2x-0117-bnx2x-Fix-move-FP-memory-deallocations.patch
 	patches.drivers/bnx2x-0118-bnx2x-Fix-functionality-of-configuring-vlan-list.patch
 	patches.drivers/bnx2x-0119-bnx2x-Fix-VF-memory-leak-unload.patch
+	patches.drivers/bnx2x-0120-bnx2x-Fix-VF-stats-sync.patch
 
 	########################################################
 	# Wireless Networking
