bnx2x: Support probing and removing of VF device (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16903,6 +16903,7 @@
 
 	# bnx2x SP4 update (bsc#908684 FATE#317539)
 	patches.drivers/bnx2x-0001-bnx2x-remove-__dev-attributes.patch
+	patches.drivers/bnx2x-0002-bnx2x-Support-probing-and-removing-of-VF-device.patch
 
 	########################################################
 	# Wireless Networking
