--- a/series.conf
+++ b/series.conf
@@ -17035,6 +17035,7 @@
 	patches.drivers/bnx2x-0131-bnx2x-KR2-disablement-fix.patch
 	patches.drivers/bnx2x-0132-bnx2x-57840-non-external-loopback-test-fail-on-1G.patch
 	patches.drivers/bnx2x-0133-bnx2x-Specific-Active-DAC-is-not-detected-on-57810.patch
+	patches.drivers/bnx2x-0134-bnx2x-Fix-848xx-duplex-settings.patch
 
 	########################################################
 	# Wireless Networking
