bnx2x: ethtool -d might cause timeout in log (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17134,6 +17134,7 @@
 	patches.drivers/bnx2x-0230-bnx2x-Prevent-pci_disable_sriov-with-assigned-VFs.patch
 	patches.drivers/bnx2x-0231-bnx2x-Make-BP_VF-more-robust.patch
 	patches.drivers/bnx2x-0232-bnx2x-FW-assertion-changes.patch
+	patches.drivers/bnx2x-0233-bnx2x-ethtool-d-might-cause-timeout-in-log.patch
 
 	########################################################
 	# Wireless Networking
