bnx2x: Fix bnx2x_panic_dump for VFs (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17102,6 +17102,7 @@
 	patches.drivers/bnx2x-0198-bnx2x-Semantic-Validate-vlan-mac-changes.patch
 	patches.drivers/bnx2x-0199-bnx2x-Add-support-in-PF-driver-for-RSC.patch
 	patches.drivers/bnx2x-0200-bnx2x-Revise-IOV-vlan-mac-validation.patch
+	patches.drivers/bnx2x-0201-bnx2x-Fix-bnx2x_panic_dump-for-VFs.patch
 
 	########################################################
 	# Wireless Networking
