net-bnx2x: dont reload on GRO change (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16979,6 +16979,7 @@
 	patches.drivers/bnx2x-0075-Revert-bnx2x-allow-nvram-test-to-run-when-device-is-.patch
 	patches.drivers/bnx2x-0076-bnx2x-correct-reading-of-speed-capabilities.patch
 	patches.drivers/bnx2x-0077-bnx2x-Prevent-memory-leak-when-cnic-is-absent.patch
+	patches.drivers/bnx2x-0078-net-bnx2x-dont-reload-on-GRO-change.patch
 
 	########################################################
 	# Wireless Networking
