bnx2x: fix dump flag handling (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17003,6 +17003,7 @@
 	patches.drivers/bnx2x-0099-bnx2x-Fix-compilation-with-no-IOV-support.patch
 	patches.drivers/bnx2x-0100-bnx2x-Remove-sparse-and-coccinelle-warnings.patch
 	patches.drivers/bnx2x-0101-bnx2x-remove-zeroing-of-dump-data-buffer.patch
+	patches.drivers/bnx2x-0102-bnx2x-fix-dump-flag-handling.patch
 
 	########################################################
 	# Wireless Networking
