bnx2x: add Big-Endian ethtool comment (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17069,6 +17069,7 @@
 	patches.drivers/bnx2x-0165-bnx2x-avoid-null-pointer-dereference-when-enabling-S.patch
 	patches.drivers/bnx2x-0166-bnx2x-downgrade-valid-ME-register-value-message-leve.patch
 	patches.drivers/bnx2x-0167-bnx2x-Add-AER-support-missing-bits.patch
+	patches.drivers/bnx2x-0168-bnx2x-add-Big-Endian-ethtool-comment.patch
 
 	########################################################
 	# Wireless Networking
