--- a/series.conf
+++ b/series.conf
@@ -16914,6 +16914,7 @@
 	patches.drivers/bnx2x-0010-bnx2x-Allocate-VF-database-in-PF-when-VFs-are-presen.patch
 	patches.drivers/bnx2x-0011-bnx2x-Prepare-device-and-initialize-VF-database.patch
 	patches.drivers/bnx2x-0012-bnx2x-Infrastructure-for-VF-PF-request-on-PF-side.patch
+	patches.drivers/bnx2x-0013-bnx2x-Support-of-PF-driver-of-a-VF-acquire-request.patch
 
 	########################################################
 	# Wireless Networking
