bnx2x: save RAM in kdump kernel by using a single queue (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -17107,6 +17107,7 @@
 	patches.drivers/bnx2x-0203-bnx2x-utilize-FW-7.8.19.patch
 	patches.drivers/bnx2x-0204-bnx2x-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
 	patches.drivers/bnx2x-0205-bnx2x-clamp-num_queues-to-prevent-passing-a-negative.patch
+	patches.drivers/bnx2x-0206-bnx2x-save-RAM-in-kdump-kernel-by-using-a-single-que.patch
 
 	########################################################
 	# Wireless Networking
