--- a/series.conf
+++ b/series.conf
@@ -16954,6 +16954,7 @@
 	patches.drivers/bnx2x-0050-bnx2x-add-RSS-capability-for-GRE-traffic.patch
 	patches.drivers/bnx2x-0051-bnx2x-fix-occasional-statistics-off-by-4GB-error.patch
 	patches.drivers/bnx2x-0052-bnx2x-AER-revised.patch
+	patches.drivers/bnx2x-0053-bnx2x-fix-assignment-of-signed-expression-to-unsigne.patch
 
 	########################################################
 	# Wireless Networking
