bnx2x: Support of PF driver of a VF q_teardown request (bsc#908684 FATE#317539).

--- a/series.conf
+++ b/series.conf
@@ -16919,6 +16919,7 @@
 	patches.drivers/bnx2x-0015-bnx2x-Support-statistics-collection-for-VFs-by-the-P.patch
 	patches.drivers/bnx2x-0016-bnx2x-Support-of-PF-driver-of-a-VF-setup_q-request.patch
 	patches.drivers/bnx2x-0017-bnx2x-Support-of-PF-driver-of-a-VF-q_filters-request.patch
+	patches.drivers/bnx2x-0018-bnx2x-Support-of-PF-driver-of-a-VF-q_teardown-reques.patch
 
 	########################################################
 	# Wireless Networking
